--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "git-tool",
-  "version": "1.0.0",
+  "name": "gitool",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "prepublish": "npm test"
   },
   "bin": {
-    "gitTool": "index.js"
+    "gitool": "index.js"
   },
   "access": "public",
   "keywords": [],
