--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gitool",
-  "version": "1.1.1",
+  "version": "1.2.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -21,6 +21,7 @@
   "dependencies": {
     "chalk": "^3.0.0",
     "jest": "^24.9.0",
+    "prompts": "^2.3.0",
     "yargs": "^14.2.0"
   }
 }
