feat(bin): gt is a new alias for gitool

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prepublish": "npm test"
   },
   "bin": {
-    "gitool": "index.js"
+    "gitool": "index.js",
+    "gt": "index.js"
   },
   "repository": {
     "type": "git",
