--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "chalk": "^3.0.0",
     "jest": "^24.9.0",
+    "moustache": "0.0.4",
+    "mustache": "^3.1.0",
     "prompts": "^2.3.0",
     "yargs": "^14.2.0"
   }
