--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "prepublish": "npm test",
+    "prepublish": "npm test && node index.js --changelog",
     "postpublish": "npm version minor && git push"
   },
   "bin": {
