--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "preversion": "node index.js -po=changelog.md",
     "test": "jest",
     "prepublish": "npm test && node index.js --changelog",
     "postpublish": "npm version minor && git push"
