--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gitool",
+  "name": "@arianee/gitool",
   "version": "1.22.0",
   "description": "",
   "main": "index.js",
@@ -13,9 +13,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/stefdelec/gitool"
+    "url": "https://github.com/Arianee/gitool"
   },
   "access": "public",
+  "private": false,
   "keywords": [],
   "author": "",
   "license": "ISC",
